index.html: updated img src (removed local path)

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body>
 
     <header>
-      <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/logo-34x34.png" alt="airbnb logo"/>
-      <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/menu-arrowdown-9x9.png" alt="dropdown menu icon"  />
+      <img src="images/img-original/logo-34x34.png" alt="airbnb logo"/>
+      <img src="images/img-original/menu-arrowdown-9x9.png" alt="dropdown menu icon"  />
     </header>
 
     <h1>  <!-- Different text displayed on firefox // chrome browsers -->
@@ -43,7 +43,7 @@
     <aside>
 
         <figure class="exp-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
           <figcaption>
 
@@ -66,7 +66,7 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
           <figcaption>
 
@@ -89,7 +89,7 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
           <figcaption>
 
@@ -112,7 +112,7 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
           <figcaption>
 
@@ -135,7 +135,7 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
           <figcaption>
 
@@ -170,7 +170,7 @@
 
 
       <figure class="exp-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
           <figcaption>
 
@@ -193,7 +193,7 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
           <figcaption>
 
@@ -216,7 +216,7 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
           <figcaption>
 
@@ -239,7 +239,7 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
           <figcaption>
 
@@ -263,7 +263,7 @@
 
         <figure class="exp-figure">
 
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
           <figcaption>
 
@@ -294,7 +294,7 @@
     <aside>
 
         <figure class="logements-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/logement-240x160.jpg" alt="#"/>
+          <img src="images/img-mobile/logement-240x160.jpg" alt="#"/>
 
           <figcaption>
 
@@ -321,7 +321,7 @@
         </figure>
 
         <figure class="logements-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/logement-240x160.jpg" alt="#"/>
+          <img src="images/img-mobile/logement-240x160.jpg" alt="#"/>
 
           <figcaption>
 
@@ -348,7 +348,7 @@
         </figure>
 
         <figure class="logements-figure">
-          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/logement-240x160.jpg" alt="#"/>
+          <img src="images/img-mobile/logement-240x160.jpg" alt="#"/>
 
           <figcaption>
 
@@ -387,42 +387,42 @@
 
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
         </figure>
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
         </figure>
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
         </figure>
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
         </figure>
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
         </figure>
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -435,7 +435,7 @@
 
     <section>
 
-      <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/host-414x217.jpg" alt="#" />
+      <img src="images/img-mobile/host-414x217.jpg" alt="#" />
 
       <div class="hosts-section">
 
