index.html: added <footer> // styles.css: added properties to <footer>

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<html>
-
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
@@ -449,9 +447,47 @@
 
       </div>
 
-
     </section>
 
-  </body>
+    <footer>
 
-</html>
+      <div class="select-footer">
+        <select name="language" id="language">
+          <option>Français</option>
+          <option>Français</option>
+          <option>Français</option>
+        </select>
+
+        <select name="currency" id="currency">
+          <option>EUR</option>
+          <option>EUR</option>
+          <option>EUR</option>
+        </select>
+      </div>
+
+
+      <div class="corporate-footer">
+        <img src="https://cdn0.iconfinder.com/data/icons/social-media-2104/24/social_media_social_media_logo_airbnb-20.png" alt="airbnb icon" />
+        <h4>©Airbnb, Inc.</h4>
+      </div>
+
+    <div class="bottom-footer">
+
+      <div class="links-footer">
+        <a href="#">Conditions</a>
+        <a href="#">Politique de Confidentialité</a>
+      </div>
+
+      <div class="socialmedia-footer">
+        <img src="https://cdn0.iconfinder.com/data/icons/website-kit-2/512/icon_284-16.png" alt="facebook icon" />
+        <img src="https://cdn0.iconfinder.com/data/icons/website-kit-2/512/icon_266-16.png" alt="twitter icon" />
+        <img src="https://cdn1.iconfinder.com/data/icons/social-media-2106/24/social_media_social_media_logo_instagram-16.png" alt="instagram icon" />
+      </div>
+
+    </div>
+
+
+
+    </footer>
+
+  </body>
