index.html: <footer> added width to select

--- a/index.html
+++ b/index.html
@@ -36,32 +36,13 @@
 
 <!-- ASIDE Row #1 "Réservées à l'instant" -->
 
-    <h2>Réservées à l'instant</h2>
 
     <aside>
 
-        <figure class="exp-figure">
-          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+      <h2>Réservées à l'instant</h2>
 
-          <figcaption>
+      <div class="div-img-aside">
 
-            <p>
-              <span class="price-figcaption">90€</span>
-              Ride horses to medieval villages...
-            </p>
-
-            <div class="ratings-figcaption">
-              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-
-              <p class="comments-figcaption">14 commentaires</p>
-            </div>
-
-          </figcaption>
-        </figure>
 
         <figure class="exp-figure">
           <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
@@ -154,18 +135,43 @@
 
           </figcaption>
         </figure>
+
+        <figure class="exp-figure">
+          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+
+          <figcaption>
+
+            <p>
+              <span class="price-figcaption">90€</span>
+              Ride horses to medieval villages...
+            </p>
+
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
+
+          </figcaption>
+        </figure>
+
+      </div>
 
     </aside>
 
 
 <!-- ASIDE Row #2 "Expériences" -->
 
+
+<aside>
+
 <h2>Expériences</h2>
 
-
-    <aside>
-
-
+      <div class="div-img-aside">
 
       <figure class="exp-figure">
           <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
@@ -283,40 +289,18 @@
           </figcaption>
         </figure>
 
+      </div>
+
     </aside>
 
 <!-- ASIDE Row #3 "Logements" -->
 
-    <h2>Logements</h2>
 
     <aside>
 
-        <figure class="logements-figure">
-          <img src="images/img-mobile/logement-240x160.jpg" alt="#"/>
+      <h2>Logements</h2>
 
-          <figcaption>
-
-            <p>
-              <span class="price-figcaption">56€
-              La Rosa de Ortega</span>
-            </p>
-
-            <p>
-              Chambre privée - 1 lit
-            </p>
-
-            <div class="ratings-figcaption">
-              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-
-              <p class="comments-figcaption">14 commentaires</p>
-            </div>
-
-          </figcaption>
-        </figure>
+      <div class="div-img-aside">
 
         <figure class="logements-figure">
           <img src="images/img-mobile/logement-240x160.jpg" alt="#"/>
@@ -367,9 +351,38 @@
               <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
 
               <p class="comments-figcaption">14 commentaires</p>
+            </div>
 
           </figcaption>
         </figure>
+
+        <figure class="logements-figure">
+          <img src="images/img-mobile/logement-240x160.jpg" alt="#"/>
+
+          <figcaption>
+
+            <p>
+              <span class="price-figcaption">56€
+              La Rosa de Ortega</span>
+            </p>
+
+            <p>
+              Chambre privée - 1 lit
+            </p>
+
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+              <p class="comments-figcaption">14 commentaires</p>
+
+          </figcaption>
+        </figure>
+
+      </div>
 
     </aside>
 
@@ -377,11 +390,13 @@
 
 
 
-<h2>Destinations à la une	</h2>
 
 
     <aside>
 
+      <h2>Destinations à la une	</h2>
+
+      <div class="div-img-aside">
 
 
         <figure class="destinations-figure">
@@ -425,6 +440,8 @@
             <h3>Tokyo</h3>
           </figcaption>
         </figure>
+
+      </div>
 
     </aside>
 
@@ -454,15 +471,16 @@
       <div class="select-footer">
         <select name="language" id="language">
           <option>Français</option>
-          <option>Français</option>
-          <option>Français</option>
+          <option>English</option>
+          <option>Grolandais</option>
         </select>
 
         <select name="currency" id="currency">
           <option>EUR</option>
-          <option>EUR</option>
-          <option>EUR</option>
+          <option>USD</option>
+          <option>EUGRO</option>
         </select>
+
       </div>
 
 
