index.html : desktop version - <header> added desktop-header // <h1> adjusted font properties + width

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 
     <header>
       <img src="images/img-original/logo-34x34.png" alt="airbnb logo"/>
-      <img src="images/img-original/menu-arrowdown-9x9.png" alt="dropdown menu icon"  />
+      <img id="arrow-img-header" src="images/img-original/menu-arrowdown-9x9.png" alt="menu icon"  />
+
+      <div class="desktop-menu-header">
+        <a>Devenez hôte</a>
+        <a>Help</a>
+        <a>Inscription</a>
+        <a>Connexion</a>
+
+      </div>
     </header>
+
+
 
     <h1>  <!-- Different text displayed on firefox // chrome browsers -->
       <span class="h1-span">Où souhaitez-vous aller ? </span>
@@ -465,6 +475,9 @@
       </div>
 
     </section>
+
+
+
 
     <footer>
 
