styles.css : added seperate properties for no display

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
         Complétez vos revenus en accueillant des voyageurs.
         </p>
 
-        <button type="button">Estimer mes revenus</button>
+        <button class="button-section" type="button">Estimer mes revenus</button>
 
       </div>
 
