index.html: renamed button-form to red-button-form

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </select>
         </div>
 
-        <button class="button-form" type="submit" value="Rechercher">Rechercher</button>
+        <button class="red-button-form" type="submit" value="Rechercher">Rechercher</button>
 
 
     </form>
