index.html: updated margin form // display flex on section

--- a/index.html
+++ b/index.html
@@ -491,7 +491,10 @@
 
     <section>
 
-      <img src="images/img-mobile/host-414x217.jpg" alt="#" />
+      <img class="mobile-img" src="images/img-mobile/host-414x217.jpg" alt="#" />
+
+      <img id="desktop-img" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/hosts.jpg" alt="#" />
+
 
       <div class="hosts-section">
 
