mediaquery desktop : updated <aside img> with desktop format

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
         </select>
         </div>
 
-        <button class="red-button-form" type="submit" value="Rechercher">Rechercher</button>
-
+        <button id="button-form" type="submit" value="Rechercher">Rechercher</button>
 
     </form>
 
@@ -86,7 +85,8 @@
 
 
         <figure class="exp-figure">
-          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -109,7 +109,8 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -132,7 +133,8 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -155,7 +157,8 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -178,7 +181,8 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -215,7 +219,8 @@
       <div class="div-img-aside">
 
       <figure class="exp-figure">
-          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+        <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
+        <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -238,7 +243,8 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -261,7 +267,8 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -284,7 +291,8 @@
         </figure>
 
         <figure class="exp-figure">
-          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -308,7 +316,8 @@
 
         <figure class="exp-figure">
 
-          <img src="images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -344,7 +353,9 @@
       <div class="div-img-aside">
 
         <figure class="logements-figure">
-          <img src="images/img-mobile/logement-240x160.jpg" alt="#"/>
+
+          <img id="mobile-img-figure" src="images/img-mobile/logement-240x160.jpg" alt="accommodation in berlin"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/logement.jpg" alt="accommodation in berlin"/>
 
           <figcaption>
 
@@ -371,7 +382,9 @@
         </figure>
 
         <figure class="logements-figure">
-          <img src="images/img-mobile/logement-240x160.jpg" alt="#"/>
+
+          <img id="mobile-img-figure" src="images/img-mobile/logement-240x160.jpg" alt="accommodation in berlin"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/logement.jpg" alt="accommodation in berlin"/>
 
           <figcaption>
 
@@ -398,7 +411,8 @@
         </figure>
 
         <figure class="logements-figure">
-          <img src="images/img-mobile/logement-240x160.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/logement-240x160.jpg" alt="accommodation in berlin"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/logement.jpg" alt="accommodation in berlin"/>
 
           <figcaption>
 
@@ -429,10 +443,6 @@
 
 <!-- ASIDE Row #4 "Destinations à la une" -->
 
-
-
-
-
     <aside>
 
       <h2>Destinations à la une	</h2>
@@ -441,42 +451,48 @@
 
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
         </figure>
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
         </figure>
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
         </figure>
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
         </figure>
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
         </figure>
 
         <figure class="destinations-figure">
-          <img class="destinations-img" src="images/img-mobile/city-2-114x177.jpg" alt="#"/>
+          <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -510,12 +526,14 @@
 
     </section>
 
-
-
+    <!-- !!!!!!!!!!!!!! Section "hosts" !!!!!!!!!!!!!! -->
 
     <footer>
 
+
+
       <div class="select-footer">
+
         <select name="language" id="language">
           <option>Français</option>
           <option>English</option>
@@ -529,6 +547,17 @@
         </select>
 
       </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
       <div class="corporate-footer">
