index.html : added footer desktop

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     </aside>
 
 
-<!-- #### Section : "hosts" #### -->
+<!-- !!!!!!!!!!!!!! Section : "hosts" !!!!!!!!!!!!!! -->
 
     <section>
 
@@ -526,10 +526,12 @@
 
     </section>
 
-    <!-- !!!!!!!!!!!!!! Section "hosts" !!!!!!!!!!!!!! -->
+    <!-- !!!!!!!!!!!!!! footer !!!!!!!!!!!!!! -->
 
     <footer>
 
+
+    <div class="try">
 
 
       <div class="select-footer">
@@ -549,15 +551,37 @@
       </div>
 
 
+      <div class="desktop-footer">
+        <span>Airbnb</span>
+        <a href="#">À propos</a>
+        <a href="#">Carrières</a>
+        <a href="#">Presse</a>
+        <a href="#">Règles</a>
+        <a href="#">Aide</a>
+        <a href="#">Diversité et Intégration</a>
+      </div>
 
+      <div class="desktop-footer">
+        <span>Airbnb</span>
+        <a href="#">À propos</a>
+        <a href="#">Carrières</a>
+        <a href="#">Presse</a>
+        <a href="#">Règles</a>
+        <a href="#">Aide</a>
+        <a href="#">Diversité et Intégration</a>
+      </div>
 
+      <div class="desktop-footer">
+        <span>Airbnb</span>
+        <a href="#">À propos</a>
+        <a href="#">Carrières</a>
+        <a href="#">Presse</a>
+        <a href="#">Règles</a>
+        <a href="#">Aide</a>
+        <a href="#">Diversité et Intégration</a>
+      </div>
 
-
-
-
-
-
-
+    </div>
 
 
       <div class="corporate-footer">
