index.html: img links for mediaquery desktop

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -110,7 +110,7 @@
 
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -134,7 +134,7 @@
 
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -158,7 +158,7 @@
 
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -182,7 +182,7 @@
 
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -220,7 +220,7 @@
 
       <figure class="exp-figure">
         <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
-        <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
+        <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -244,7 +244,7 @@
 
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -268,7 +268,7 @@
 
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -292,7 +292,7 @@
 
         <figure class="exp-figure">
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -317,7 +317,7 @@
         <figure class="exp-figure">
 
           <img id="mobile-img-figure" src="images/img-mobile/exp-4-177x265.jpg" alt="horsing around"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/exp-4.jpg" alt="horsing around"/>
+          <img id="desktop-img-figure" src="images/img-original/exp-4.jpg" alt="horsing around"/>
 
           <figcaption>
 
@@ -355,7 +355,7 @@
         <figure class="logements-figure">
 
           <img id="mobile-img-figure" src="images/img-mobile/logement-240x160.jpg" alt="accommodation in berlin"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/logement.jpg" alt="accommodation in berlin"/>
+          <img id="desktop-img-figure" src="images/img-original/logement.jpg" alt="accommodation in berlin"/>
 
           <figcaption>
 
@@ -384,7 +384,7 @@
         <figure class="logements-figure">
 
           <img id="mobile-img-figure" src="images/img-mobile/logement-240x160.jpg" alt="accommodation in berlin"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/logement.jpg" alt="accommodation in berlin"/>
+          <img id="desktop-img-figure" src="images/img-original/logement.jpg" alt="accommodation in berlin"/>
 
           <figcaption>
 
@@ -412,7 +412,7 @@
 
         <figure class="logements-figure">
           <img id="mobile-img-figure" src="images/img-mobile/logement-240x160.jpg" alt="accommodation in berlin"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/logement.jpg" alt="accommodation in berlin"/>
+          <img id="desktop-img-figure" src="images/img-original/logement.jpg" alt="accommodation in berlin"/>
 
           <figcaption>
 
@@ -452,7 +452,7 @@
 
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -460,7 +460,7 @@
 
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -468,7 +468,7 @@
 
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -476,7 +476,7 @@
 
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -484,7 +484,7 @@
 
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -492,7 +492,7 @@
 
         <figure class="destinations-figure">
           <img id="mobile-img-figure" src="images/img-mobile/city-2-114x177.jpg" alt="tokyo"/>
-          <img id="desktop-img-figure" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/city-2.jpg" alt="tokyo"/>
+          <img id="desktop-img-figure" src="images/img-original/city-2.jpg" alt="tokyo"/>
           <figcaption>
             <h3>Tokyo</h3>
           </figcaption>
@@ -509,7 +509,7 @@
 
       <img class="mobile-img" src="images/img-mobile/host-414x217.jpg" alt="#" />
 
-      <img id="desktop-img" src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/hosts.jpg" alt="#" />
+      <img id="desktop-img" src="images/img-original/hosts.jpg" alt="#" />
 
 
       <div class="hosts-section">
